--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
       <article class="proj">
         <a class="teaser" href="#" aria-label="Project website">
-          <img src="assets/images/VFP.gif" alt="Teaser for SECOND PROJECT" loading="lazy">
+          <img src="assets/images/vfp.gif" alt="Teaser for SECOND PROJECT" loading="lazy">
         </a>
         <div class="info">
           <h3>Vfp: Variational flow-matching policy for multi-modal robot manipulation</h3>
