--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         </a>
         <div class="info">
           <h3>ForceVLA: Enhancing VLA Models with a Force-aware MoE for Contact-rich Manipulation</h3>
-          <p class="meta"><b>Venue/Year:</b> Under review 2025</p>
+          <p class="meta"><b>Venue/Year:</b> Nips 2025</p>
           <!-- <ul class="authors" aria-label="Authors"> -->
             <!-- <li><a href="https://your-site.example" target="_blank" rel="noopener">Your Name</a></li>
             <li><a href="https://scholar.google.com/" target="_blank" rel="noopener">Student A</a></li>
