add new project

--- a/index.html
+++ b/index.html
@@ -519,6 +519,27 @@
 
       <article class="proj">
         <a class="teaser" href="#" aria-label="Project website">
+          <img src="assets/images/control-acc.png" alt="Teaser for SECOND PROJECT" loading="lazy">
+        </a>
+        <div class="info">
+          <h3>Deep Reinforcement Learning Based Distributed Active Joint Localization and Target Tracking</h3>
+          <p class="meta"><b>Venue/Year:</b> ACC 2024</p>
+          <p> Dongming Wang, Shaoshu Su, Wei Ren, <b>Ce Hao</b></p>
+          <!-- <ul class="authors" aria-label="Authors">
+            <li><a href="https://your-site.example" target="_blank" rel="noopener">Your Name</a></li>
+            <li><a href="https://scholar.google.com/" target="_blank" rel="noopener">Student A</a></li>
+            <li><a href="https://github.com/" target="_blank" rel="noopener">Student B</a></li>
+          </ul>
+          <p>One-sentence problem; one-sentence idea; one-sentence key result.</p> -->
+          <div class="actions">
+            <!-- <a class="btn" href="https://sites.google.com/view/gamma-articulation" target="_blank" rel="noopener">Website</a> -->
+            <a class="btn" href="https://par.nsf.gov/servlets/purl/10554297" target="_blank" rel="noopener">Paper</a>
+          </div>
+        </div>
+      </article>
+
+      <article class="proj">
+        <a class="teaser" href="#" aria-label="Project website">
           <img src="assets/images/gamma.gif" alt="Teaser for SECOND PROJECT" loading="lazy">
         </a>
         <div class="info">
@@ -628,7 +649,7 @@
         </a>
         <div class="info">
           <h3>Path planning for unmanned surface vehicle based on predictive artificial potential field</h3>
-          <p class="meta"><b>Venue/Year:</b> Journal/Conference 2024</p>
+          <p class="meta"><b>Venue/Year:</b> International Journal of Advanced Robotic Systems 2020</p>
           <p><b>Ce Hao</b>, Jiangcheng Su,  Jia Song</p>
           <!-- <ul class="authors" aria-label="Authors">
             <li><a href="https://your-site.example" target="_blank" rel="noopener">Your Name</a></li>
