--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="google-site-verification" content="Mdbl9HELJqEvdpoEk00km3b9gQHmvCnyG4TyIFU2E2s" />
+  
   <title>Ce Hao</title>
 
   <!-- =======================================================================
