--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
       <nav class="nav" aria-label="Primary">
         <a href="#about">About</a>
         <a href="#news">News</a>
-        <a href="#research">Research</a>
-        <a href="#people">People</a>
-        <a href="#join">Join</a>
         <a href="#contact">Contact</a>
+        <a href="#research">Research</a>
+        <!-- <a href="#people">People</a> -->
+        <!-- <a href="#join">Join</a> -->
       </nav>
     </header>
 
@@ -234,7 +234,7 @@
           My research focuses on bimanual mobile robot manipulation and the dynamics and locomotion of quadrupedal and humanoid robots.
         </p>
         <p>
-          I am currently a PhD candidate in the National University of Singapure, supervised by 
+          I am currently a PhD candidate in the National University of Singapore, supervised by 
           <a href="https://haroldsoh.com/"> Prof. Harold Soh </a>.
           Before NUS, I studied in the University of California, Berkeley as a PhD student in 
           <a href="https://msc.berkeley.edu/"> Prof. Masayoshi Tomizuka</a>'s lab.
