--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="google-site-verification" content="Mdbl9HELJqEvdpoEk00km3b9gQHmvCnyG4TyIFU2E2s" />
   
   <title>Ce Hao</title>
+  <meta name="description" content="Ce Hao's personal website — projects, notes, and links. " />
 
   <!-- =======================================================================
        META / SEO (edit these)
