--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@
       <h2>News</h2>
       <ul class="news-list">
         <li>
+          <span class="news-date">2025-12</span>
+          <span>REBot was accepted to RA-L 2025.</span>
+        </li>
+        <li>
           <span class="news-date">2025-10</span>
           <span>Force-VLA was accepted to Nips 2025.</span>
         </li>
