--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
       <img class="avatar" src="assets/images/person.jpg" alt="Portrait of YOUR NAME" loading="lazy">
       <div>
         <h1>Ce Hao (郝策)</h1>
-        <p class="subtitle">Incoming Assistant Professor · Zhongguancun Academy</p>
+        <p class="subtitle"> Assistant Professor · Zhongguancun Academy</p>
         <p>
-          I am Ce Hao, and I will be joining the <a href="https://www.bjzgca.edu.cn/"> Zhongguancun Academy </a> as an Assistant Professor in 2026.
+          I am Ce Hao, and I joined  <a href="https://www.bjzgca.edu.cn/"> Zhongguancun Academy </a> as an Assistant Professor in 2026.
           My research focuses on bimanual mobile robot manipulation and the dynamics and locomotion of quadrupedal and humanoid robots.
         </p>
         <p>
