--- a/index.html
+++ b/index.html
@@ -331,7 +331,8 @@
       <!-- <p>Email: <a href="cehao@u.nus.edu">cehao "at" u "dot" nus "dot" edu</a></p> -->
        <!-- <p>Email: cehao@u.nus.edu</p> -->
       <p>Email: <a href="mailto:cehao@u.nus.edu">cehao@u.nus.edu</a></p>
-      <p>Office: COM4, SoC, NUS</p>
+      <p>Email: <a href="mailto:haoce@bjzgca.edu.cn">haoce@bjzgca.edu.cn</a></p>
+      <p>Office: Building C9, Zhongguancun Academy, Beijing, China</p>
     </section>
 
     <hr class="rule"/>
